# Dali-httpclient

./: CMakeLists.txt
include/: MyXml.h  Utilities.h  managesql.h  myHttpclient.h  tinyxml2.h
include/libmevent/net/: Connector.h  HttpClient.h  TcpClient.h
src/: Connector.cc  HttpClient.cc  MyXml.cpp  Utilities.cpp  main.cpp  managesql.cpp  myHttpclient.cpp  tinyxml2.cpp
src/base/: CurrentThread.cc
src/lib/: libcurl.lib
src/net/: Channel.cc  EventLoop.cc  SelectPoller.cc  TcpClient.cc  TcpConnection.cc
